<resources>
    <string name="app_name">®Calc</string>
    <string name="app_name_slogan">Sem Lógica</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calc">Calc</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="sub">-</string>
    <string name="add">+</string>

    <string name="cancel">C</string>
    <string name="equal">=</string>

    <string name="disp"></string>
    <string name="dispHint">Entre os Valores</string>
</resources>
