<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home"
    android:background="#ffff5f4a">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/top_view" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/disp"
        android:id="@+id/display"
        android:hint="@string/dispHint"
        android:textSize="22dp"
        android:textColor="#fffff1ec"
        android:textColorHint="#ffffa895" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/seven"
            android:text="@string/seven"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/eight"
            android:text="@string/eight"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/nine"
            android:text="@string/nine"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/div"
            android:text="@string/div"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/four"
            android:text="@string/four"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/five"
            android:text="@string/five"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/six"
            android:text="@string/six"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/mul"
            android:text="@string/mul"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/one"
            android:text="@string/one"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/two"
            android:text="@string/two"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/three"
            android:text="@string/three"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/sub"
            android:text="@string/sub"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/zero"
            android:text="@string/zero"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/equal"
            android:text="@string/equal"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/add"
            android:text="@string/add"
            android:backgroundTint="#ffff705a"
            android:textSize="22dp"
            android:background="#ffff5f4a"
            android:textColor="#ffffebd2" />
    </LinearLayout>
</LinearLayout>